manifests/apps/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: jellyfin
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged # needed for hostPath mount
