manifests/apps/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  annotations:
    hajimari.io/appName: Jellyfin
    hajimari.io/enable: "true"
    hajimari.io/icon: simple-icons:jellyfin
spec:
  parentRefs:
    - name: internal
      namespace: traefik
  hostnames:
    - jellyfin.homelab.olav.ninja
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
